fix: add text overflow to jobs titles that caused layout issues

--- a/src/components/jobs/jobs.module.css
+++ b/src/components/jobs/jobs.module.css
@@ -91,6 +91,9 @@
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .job_type {
